tests/baselines/reference/constDeclarations.errors.txt
tests/cases/compiler/constDeclarations.ts(8,19): error TS2365: Operator '<' cannot be applied to types '0' and '9'.


==== tests/cases/compiler/constDeclarations.ts (1 errors) ====
    
    // No error
    const c1 = false;
    const c2: number = 23;
    const c3 = 0, c4 :string = "", c5 = null;
    
    
    for(const c4 = 0; c4 < 9; ) { break; }
                      ~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '0' and '9'.
    
    
    for(const c5 = 0, c6 = 0; c5 < c6; ) { break; }